integration_tests/codegen_fail/fail/interface/wrong_item_impl_block.rs
use juniper::{graphql_interface, GraphQLObject};

#[derive(GraphQLObject)]
pub struct ObjA {
    test: String,
}

#[graphql_interface(for = ObjA)]
impl ObjA {}

fn main() {}
